--- a/app/css/style.css
+++ b/app/css/style.css
@@ -198,3 +198,28 @@ article {
 body[data-page] article.active {
     transform: translateY(0);    
 }
+
+/* demo formatting */
+p {
+    line-height: 140%;
+    margin: 0 .5em .5em;
+}
+
+p > code {
+    font-size: 92%;
+    background: #f0f0f0;
+    padding: 0 .33em;
+    border-radius: .33em;
+    color: #606060;
+    border: 1px solid #e0e0e0;
+}
+
+article > p > a {
+    color: #00ace9;
+    text-decoration: none;
+}
+article > p > a:focus,
+article > p > a:hover,
+article > p > a:active {
+    text-decoration: underline;
+}
