--- a/app/css/style.css
+++ b/app/css/style.css
@@ -178,9 +178,11 @@ article {
 
     transition: all 1s ease;
     transform: translateY(100%);
+    -webkit-transform: translateY(100%);
 }
 body[data-page] article.active {
-    transform: translateY(0);    
+    transform: translateY(0);
+	-webkit-transform: translateY(0);
 }
 
 /* demo formatting */
